# Generated by Django 4.2.5 on 2023-10-03 18:45

from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('GDRFarmacia', '0004_produto'),
    ]

    operations = [
        migrations.CreateModel(
            name='Estoque',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('quantidadeMinima', models.IntegerField()),
                ('produtoList', models.ManyToManyField(related_name='estoque', to='GDRFarmacia.produto')),
            ],
        ),
    ]
