# Generated by Django 4.2.5 on 2023-10-07 20:43

from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('GDRFarmacia', '0006_compra'),
    ]

    operations = [
        migrations.CreateModel(
            name='Caixa',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
            ],
        ),
    ]
